# EdDonner-AgentsAI

./: note-taking.txt
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  4_lab4.html  4_lab4.ipynb  app.py
2_openai/: 2_lab2-joe.ipynb  2_lab2.html  3_lab3-joe-v2 copy.ipynb  3_lab3-joe.html  4_lab4-joe.ipynb  htm-3_lab3-joe.html  html-4_lab4-joe.html  tut-4_lab4.md  video-watching.txt
3_crew/: NoteTaking.txt
3_crew/coder-ollama-joe/: pyproject.toml
3_crew/coder-ollama-joe/output/: code_and_output.txt
3_crew/coder-ollama-joe/src/coder/: crew.py
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/debate/src/debate/: main.py
3_crew/debate/src/debate/config/: agents.yaml
3_crew/debate_joe_try_v2/: README.md  pyproject.toml  report.md
3_crew/debate_joe_try_v2/src/joe_try_v2/: crew.py  main.py  try.py
3_crew/engineering_team/: Work log of Engineering_team program:.ini
3_crew/joe-try/debate/src/debate/: crew.py  main.py
3_crew/joe-try/debate/src/debate/config/: agents.yaml  tasks.yaml
3_crew/ori-stock_picker/memory/: long_term_memory_storage.db
3_crew/ori-stock_picker/output/: decision.md  research_report.json  trending_companies.json
3_crew/ori-stock_picker/src/stock_picker/: main.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  2_lab2.md  3_lab3.ipynb  3_lab3.md  memory.db-shm  memory.db-wal  temp.json
