[project]
name = "joe_try_v2"
version = "0.1.0"
description = "joe-try-v2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
joe_try_v2 = "joe_try_v2.main:run"
run_crew = "joe_try_v2.main:run"
train = "joe_try_v2.main:train"
replay = "joe_try_v2.main:replay"
test = "joe_try_v2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
